np-service.yml
apiVersion: v1
kind: Service
metadata:
  name: np
spec:
  ports:
  - nodePort: 30924
    port: 8000
    protocol: TCP 
    targetPort: 8000
  selector:
    app: hello-python
  sessionAffinity: None
  type: NodePort
